# pomodoro

./: .gitignore  CLAUDE.md  README.md  build.sh  tag-release.sh  test-e2e.sh
.github/workflows/: ci.yml  release.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json  mobile.json
src-tauri/src/: lib.rs  main.rs  notification.rs  timer.rs
src-tauri/tests/e2e/: mod.rs  tests.rs  webdriver.rs
ui/: app.js  index.html  style.css
ui/test/: test.js
