[package]
name = "pomodoro"
version = "0.1.0"
edition = "2021"

[lib]
name = "app_lib"
crate-type = ["rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "z"       # optimize for size
lto = true            # link-time optimization
codegen-units = 1     # single codegen unit for best LTO
strip = "symbols"     # strip debug symbols
panic = "abort"       # remove unwind machinery
