[package]
name = "pomodoro"
version = "0.6.0"
edition = "2021"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
e2e-test = ["ureq"]

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
ureq = { version = "2", features = ["json"], optional = true }

[[test]]
name = "e2e"
path = "tests/e2e/mod.rs"
required-features = ["e2e-test"]

[profile.dev]
lto = "thin"          # eliminate unused dep DLL imports (Tauri/webview pull 30+)

[profile.release]
opt-level = "z"       # optimize for size
lto = true            # link-time optimization
codegen-units = 1     # single codegen unit for best LTO
strip = "symbols"     # strip debug symbols
panic = "abort"       # remove unwind machinery

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"
